# Cryptal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark_sha256.rs  sha256_ref.rs
src/: lib.rs
src/derivation/: mod.rs
src/derivation/argon2id/: blake2b.rs  block.rs  boundary.rs  core.rs  memory.rs  mod.rs  params.rs  reference.rs
src/hash/: mod.rs
src/hash/blake2b/: consts.rs  core.rs  hash.rs  mod.rs  utils.rs
src/hash/sha256/: computations.rs  core.rs  mod.rs
src/hash/sha512/: computations.rs  core.rs  mod.rs
src/primitives/: mod.rs  ops.rs  u256.rs
src/primitives/conv/: mod.rs  usize.rs
src/primitives/u512/: core.rs
src/signatures/: mod.rs
src/signatures/ed25519/: add_scalar.rs  consttime.rs  core.rs  fe.rs  field.rs  ge.rs  group.rs  key_exchange.rs  keypair.rs  mod.rs  precomp_data.rs  sc.rs  scalar.rs  sign.rs  table.rs  verify.rs
tests/: argon2id.rs  blake2b.rs  ed25519.rs  sha512.rs  u256.rs
