[package]
name = "cryptal"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.180"
num-bigint = "0.4"  # Big integer lib for correct field inversion fallback
num-traits = "0.2"
windows-sys = { version = "0.61.2", features = ["Win32_Security_Cryptography"] }

[dev-dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10.9"
